# DISL

./: .gitmodules  LICENSE  README.md  configure.py
comms_proc/Espressif/ESP32-S3/: .gitignore  CMakeLists.txt  README.md  gen-ca.sh  partitions.csv  sdkconfig.defaults
comms_proc/Espressif/ESP32-S3/ca/: .gitignore
comms_proc/Espressif/ESP32-S3/main/: CMakeLists.txt  ChrFont0.h  Kconfig.projbuild  appdefs.h  appfilesystem.c  appfilesystem.h  appmqtt.c  appmqtt.h  appota.c  appota.h  appstate.c  appstate.h  appuart.c  appuart.h  appusbhost.c  appusbhost.h  appwebserver.c  appwebserver.h  appwifi.c  appwifi.h  arty_driver.c  arty_driver.h  esp32-main.c  font8x8_basic.h  ftdi.c  ftdi.h  hcsr04.h  idf_component.yml  jtag.c  jtag.h  ssd1306.c  ssd1306.h
comms_proc/controller_ui/: controller_ui.py  requirements.txt
examples/edgetestbed/: README.md
examples/edgetestbed/edgetestbed_arducam_jtag_uartprog_jpeg_cnn/: system.tml
examples/edgetestbed/edgetestbed_arducam_jtag_uartprog_no_dram_fulloffload/: system.tml
examples/edgetestbed/edgetestbed_jtag_uartprog_no_dram/: system.tml
fpga/: README.md
fpga/boards/artya735t/: README.md
fpga/common/: README.md
fpga/common/config/: definitions.tml  modules.tml
fpga/common/hdl/: ddr.v  picorv32.v  riscv_ci.v  soc_components.v
fpga/system_builder/: README.md
infrastructure_gen/: README.md  requirements.txt
infrastructure_gen/fpga/boards/: README.md
infrastructure_gen/fpga/system_builder/: build.py
infrastructure_gen/tutorials/: 01_finn.md
ml_model_gen/: README.md
tutorials/: 01_finn.md
(+68 files in other folders)
